--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/estilo.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <h1 class="text-primary">
-                    Aqui será meu postifólio online ++
-                </h1>
+    <div class="container-fluid banner">
+        <div class="row align-items-center">
+            <div class="col-12 col-sm-5">
+                <img src="assets/img/jefferson.jpg" alt="jeffersonmiranda" class="img-fluid perfil mt-3 mt-sm-5">
+            </div>
+                <div class="col-12 col-sm-7">
+                    <h1 class="text-white">
+                        JEFFERSON MIRANDA
+                    </h1>
+                </div>
             </div>
         </div>
+        
     </div>
 </body>
+
 </html>
