--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="assets/img/jefferson.jpg" alt="jeffersonmiranda" class="img-fluid perfil mt-3 mt-sm-5">
             </div>
                 <div class="col-12 col-sm-7">
-                    <h1 class="text-white">
+                    <h1 class="myname">
                         JEFFERSON MIRANDA
                     </h1>
                 </div>
@@ -25,6 +25,43 @@
         </div>
         
     </div>
+    <br>
+    <br>
+    <br>
+
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+    
+<h1 class="habilidades">HABILIDADES</h1>
+PROATIVIDADE
+<div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-success" style="width: 25%"></div>
+  </div>
+  RESPONSABILIDADE
+  <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-info" style="width: 50%"></div>
+  </div>
+  AGILIDADE
+  <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-warning" style="width: 75%"></div>
+  </div>
+  RAPIDEZ
+  <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-danger" style="width: 100%"></div>
+  </div>
+</ul>
+</div>
+
+<div class="col-6">
+<h1 class="histórico">HISTÓRICO</h1>
+
+</ul>
+</div>
+</div>
+</div>
+
+
 </body>
 
 </html>
