--- a/index.html
+++ b/index.html
@@ -32,36 +32,64 @@
 <div class="container">
     <div class="row">
         <div class="col-6">
+          
     
-<h1 class="habilidades">HABILIDADES</h1>
-PROATIVIDADE
+<b><h1 class="habilidades">HABILIDADES</h1></b>
+CRIATIVIDADE
 <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-success" style="width: 25%"></div>
+    <div class="progress-bar bg-secondary" style="width: 25%"></div>
   </div>
-  RESPONSABILIDADE
+  INOVAÇÃO
   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-info" style="width: 50%"></div>
+    <div class="progress-bar bg-row" style="width: 50%"></div>
   </div>
   AGILIDADE
   <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-warning" style="width: 75%"></div>
+    <div class="progress-bar bg-secondary" style="width: 75%"></div>
   </div>
-  RAPIDEZ
+  COMPROMETIMENTO
   <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-danger" style="width: 100%"></div>
+    <div class="progress-bar bg-row" style="width: 100%"></div>
   </div>
+  FOCO EM RESULTADOS
+<div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-secondary" style="width: 100%"></div>
+  </div>
+  COMUNICAÇÃO
+  <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-row" style="width: 97%"></div>
+  </div>
+  ORGANIZAÇÃO
+  <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-secondary" style="width: 95%"></div>
+  </div>
+  LIDERANÇA
+  <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-row" style="width: 90%"></div>
+  </div>
+</ul>
 </ul>
 </div>
 
 <div class="col-6">
-<h1 class="histórico">HISTÓRICO</h1>
+<b><h1 class="historico">HISTÓRICO</h1></b>
 
 </ul>
 </div>
 </div>
 </div>
+</div>
+</div>
 
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 
 </html>
