--- a/index.html
+++ b/index.html
@@ -35,35 +35,51 @@
           
     
 <b><h1 class="habilidades">HABILIDADES</h1></b>
-CRIATIVIDADE
+<li>CRIATIVIDADE</li>
+
 <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar bg-secondary" style="width: 25%"></div>
   </div>
-  INOVAÇÃO
+  <br>
+  <li>INOVAÇÃO</li>
+  
   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar bg-row" style="width: 50%"></div>
   </div>
-  AGILIDADE
+  <br>
+  <li>AGILIDADE</li>
+  
   <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar bg-secondary" style="width: 75%"></div>
   </div>
-  COMPROMETIMENTO
+  <br>
+  <li>COMPROMETIMENTO</li>
+ 
   <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar bg-row" style="width: 100%"></div>
   </div>
-  FOCO EM RESULTADOS
+  <br>
+  <li>FOCO EM RESULTADOS</li>
+ 
 <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar bg-secondary" style="width: 100%"></div>
   </div>
-  COMUNICAÇÃO
+  <br>
+  <li>COMUNICAÇÃO</li>
+  
   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar bg-row" style="width: 97%"></div>
   </div>
-  ORGANIZAÇÃO
+  <br>
+  <li>ORGANIZAÇÃO</li>
+  <br>
+
   <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar bg-secondary" style="width: 95%"></div>
   </div>
-  LIDERANÇA
+  <br>
+  <li>LIDERANÇA</li>
+ 
   <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar bg-row" style="width: 90%"></div>
   </div>
