--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
   </div>
 </ul>
 </ul>
+<br>
+<br>
+<br>
+<P><h4>Todas essas habilidades são importantes pois <font color="#00BFFF" class="letra"><b>auxiliam</font> </b> para que
+você consiga relacionar-se com seus colegas de trabalho e saiba
+lidar bem com seus subordinados,  <font color="#00BFFF" class="letra"><b>o que facilita o fluxo de atividades</font></b>
+na organização.</P></h4>
 </div>
 
 <div class="col-6">
