--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: #F5FFFA;">
     <div class="container-fluid banner">
         <div class="row align-items-center">
             <div class="col-12 col-sm-5">
@@ -35,53 +35,33 @@
           
     
 <b><h1 class="habilidades">HABILIDADES</h1></b>
+<br>
+<br>
+
 <li>CRIATIVIDADE</li>
 
 <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-secondary" style="width: 25%"></div>
+    <div class="progress-bar bg-warning" style="width: 25%"></div>
   </div>
   <br>
   <li>INOVAÇÃO</li>
-  
   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-row" style="width: 50%"></div>
-  </div>
-  <br>
-  <li>AGILIDADE</li>
-  
-  <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-secondary" style="width: 75%"></div>
+    <div class="progress-bar bg-success" style="width: 50%"></div>
   </div>
   <br>
   <li>COMPROMETIMENTO</li>
- 
-  <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-row" style="width: 100%"></div>
+ <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-warning" style="width: 100%"></div>
   </div>
-  <br>
-  <li>FOCO EM RESULTADOS</li>
- 
-<div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-secondary" style="width: 100%"></div>
-  </div>
-  <br>
+<br>
   <li>COMUNICAÇÃO</li>
-  
   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-row" style="width: 97%"></div>
-  </div>
-  <br>
-  <li>ORGANIZAÇÃO</li>
-  <br>
-
-  <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-secondary" style="width: 95%"></div>
+    <div class="progress-bar bg-success" style="width: 97%"></div>
   </div>
   <br>
   <li>LIDERANÇA</li>
- 
-  <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar bg-row" style="width: 90%"></div>
+ <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-warning" style="width: 90%"></div>
   </div>
 </ul>
 </ul>
@@ -96,6 +76,16 @@ na organização.</P></h4>
 
 <div class="col-6">
 <b><h1 class="historico">HISTÓRICO</h1></b>
+<br>
+<br>
+<div class="histo">
+  <h3><b>-Formações</b>
+
+<br>
+<br>
+<br>
+<b>-Cursos</b>
+</div></h3>
 
 </ul>
 </div>
